--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+psycopg2-binary==2.9.10
 pycodestyle==2.14.0
 pyflakes==3.4.0
 python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
+whitenoise==6.9.0
