create build.sh and add RENDER_EXTERNAL_HOSTNAME

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ POSTGRES_HOST=<db_host>
 #DJANGO
 SECRET_KEY="your-django-secret-key-here"
 DJANGO_SETTINGS_MODULE="your_settings_module_here"
+RENDER_EXTERNAL_HOSTNAME=<domain>
